--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,17 @@ spring.profiles.active=test
 
 #SERVER CONFIG
 server.port=41234
+
+#thymeleaf
+spring.thymeleaf.cache=false
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.prefix=classpath:templates/
+spring.thymeleaf.suffix=.html
+
+#resources
+spring.mvc.static-path-pattern=/resources/**
+spring.resources.static-locations=classpath:/static/
+spring.resources.add-mappings=true
+
+spring.security.user.name=qwe
+spring.security.user.password=qwerasdf
