기본 파일재생 및 리스트정보 구현완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #ACTIVE PROFILE
-spring.profiles.active=release
+spring.profiles.active=test
 
 #SERVER CONFIG
 server.port=41234
@@ -16,4 +16,4 @@ spring.resources.static-locations=classpath:/static/
 spring.resources.add-mappings=true
 
 spring.security.user.name=qwe
-spring.security.user.password=qwerasdf
+spring.security.user.password=qwe
