--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,9 @@ spring.resources.add-mappings=true
 
 spring.security.user.name=qwe
 spring.security.user.password=1q2w3e
+
+#SSL
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store-password=vmfhwprxm
+server.ssl.key-alias=spring
