--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,8 @@ spring.mvc.static-path-pattern=/resources/**
 spring.resources.static-locations=classpath:/static/
 spring.resources.add-mappings=true
 
-spring.security.user.name=qwe
-spring.security.user.password=1q2w3e
+spring.security.user.name=
+spring.security.user.password=
 
 #SSL
 server.ssl.key-store=classpath:keystore.p12
